[project]
name = "ComfyUI_FMJ_MD"
description = "Gestionnaire intelligent de téléchargement de modèles."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/bulldog68/ComfyUI_FMJ_MD"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Bulldog68"
DisplayName = "ComfyUI_FMJ_MD"
Icon = ""
